--- a/src/app/components/UI/cardcontribution/cardcontribution.component.html
+++ b/src/app/components/UI/cardcontribution/cardcontribution.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<!-- <div class="card">
     <div id="left">
         <p>
             Projet: {{contribution.projetTitre}}
@@ -7,7 +7,7 @@
             Contributeur: {{contribution.contributeurPrenom}} {{contribution.contributeurNom}}
         </p>
         <p>
-            <!-- Tache: {{contribution.nomTache}} -->
+             Tache: {{contribution.nomTache}} -
         </p>
     </div>
     <div id="right">
@@ -15,4 +15,4 @@
             Détails
         </button>
     </div>
-</div>
+</div> -->
